# terse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py
src/terse/: __init__.py  __main__.py  cli.py  compressors.py  core.py  tokens.py
tests/: test_cli.py  test_compressors.py  test_core.py  test_tokens.py
