[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terse-cli"
version = "0.1.0"
description = "Compress noisy command output before it reaches your AI coding agent. 60-90% fewer tokens, zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "zibaoyang" }]
keywords = [
    "llm", "tokens", "token-optimization", "claude-code", "codex", "cursor",
    "ai-agents", "context-engineering", "cli", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/386522758/terse"
Issues = "https://github.com/386522758/terse/issues"

[project.scripts]
terse = "terse.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
